--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
             <h3>Software Engineering - Code First Girls</h3>
             <p>Sponsored by Unilever | Completed 2024</p>
         </div>
+        <div class="edu-details">
+            <h3>Class XII - Narayana P.U College</h3>
+            <p>Percentage: 78.13% | 2019-2020</p>
+        </div>
+        <div class="edu-details">
+            <h3>Class X- S.V.V.M</h3>
+            <p>Percentage: 88.13% | 2017-2018</p>
+        </div>
     </section>
 
     <!-- Skills Section -->
@@ -117,6 +125,7 @@
                 <li><i class="fas fa-tools"></i> DevOps: CI/CD, Jenkins, Kubernetes</li>
                 <li><i class="fas fa-chart-bar"></i> Data Analysis: Pandas, NumPy, Power BI</li>
                 <li><i class="fas fa-laptop-code"></i> Salesforce Development: Apex, Visualforce, Lightning</li>
+                
             </ul>
         </div>
     </section>
@@ -125,15 +134,34 @@
     <section class="internships">
         <h2>Internships</h2>
         <div class="internship">
-            <h3>Salesforce Developer - Virtual Internship</h3>
+            <h3>Salesforce Developer Intern – Salesforce (2023)</h3>
             <div class="internship-details">
-                <p>Developed Apex classes and triggers, integrated external systems using APIs, and worked on Visualforce and Lightning components.</p>
+                <p> •	Situation: Tasked with enhancing system functionality through development and integration of external systems.</p>
+                  <p>   •	Task: Develop Apex classes and Lightning Web Components while integrating external APIs for improved system capability.</p>
+                 <p>     •	Action: Wrote efficient Python scripts for data handling and utilized Apex triggers for automating business logic.</p>
+                 <p>     •	Result: Improved the system's performance and responsiveness, leading to a 30% increase in processing speed.</p>
+                 <p>     •	Tools Used: Python, Apex, LWC, API Integration, SQL. </p>
             </div>
         </div>
         <div class="internship">
-            <h3>Knowledge Solutions India</h3>
+            <h3>Data Science Intern – Knowledge Solutions (2023)</h3>
             <div class="internship-details">
-                <p>Engaged in data analysis using Python and SQL, including predictive modeling, creating insightful data visualizations, and contributing to strategic decision-making.</p>
+                <p>•	Situation: Involved in the development of data models to support business decisions using large datasets.</p>
+                <p>•	Task: Analyze and predict trends using Python and SQL for a retail company.</p>
+                <p>•	Action: Applied data cleaning techniques, implemented predictive models using machine learning libraries, and visualized data insights for stakeholders.</p>
+                <p>•	Result: Improved data accuracy by 20% and provided actionable insights that supported business growth.</p>
+                <p>•	Tools Used: Python, SQL, Pandas, Machine Learning, Data Visualization.</p>
+            </div>
+        </div>
+        <div class="internship">
+            <h3>Salesforce Administrator Intern – Salesforce (2023)</h3>
+            <div class="internship-details">
+                <p>•   Situation: Managed the configuration of Sales and Service Cloud in a virtual environment to optimize data processes.</p>
+<p>•	Task: Required to automate business processes and enhance data-driven decision-making.</p>
+<p>•	Action: Implemented custom workflows and automated key processes, utilizing SQL to manage data queries and generate insightful reports.</p>
+<p>•	Result: Improved data processing efficiency by 40%, leading to better decision-making and reduced manual workload.</p>
+<p>•	Tools Used: Salesforce, SQL, Sales Cloud, Process Builder, Flow Builder, Dashboard. </p>
+
             </div>
         </div>
     </section>
@@ -145,10 +173,11 @@
             <h3>WanderIndia</h3>
             <div class="project-details">
                 <ul>
-                    <li>Developed a travel website showcasing India's cultural heritage, tourist destinations, and cuisine.</li>
-                    <li>Utilized Flask for backend development, ensuring fast and reliable routing between different sections.</li>
-                    <li>Interactive map feature allows users to explore popular tourist destinations in India.</li>
-                    <li>Integrated Google Maps API for better user interaction and navigation.</li>
+                    <li>•	Problem: There was a need for an interactive platform where travelers could explore popular tourist destinations, get recommendations for the best local food, provide feedback, and have access to an administrative login for managing content.</li>
+<li>•	Action: Designed and developed a responsive website featuring user-friendly sections for tourist destinations, food recommendations, and a feedback form. Integrated an admin login functionality for easy content management.</li>
+<li>•	Result: Successfully created an engaging and informative platform that allowed users to discover Indian tourist spots, submit feedback, and enabled admins to manage content efficiently.</li>
+<li>•	Tools Used: HTML, CSS, JavaScript, Bootstrap, MySQL, Flask, Python, REST APIs.</li>
+
                 </ul>
             </div>
         </div>
@@ -156,9 +185,24 @@
             <h3>Indian Currency Recognition System</h3>
             <div class="project-details">
                 <ul>
-                    <li>Created a machine learning-based system to recognize Indian currency notes aimed at assisting visually impaired individuals.</li>
-                    <li>Trained using OpenCV and TensorFlow, with an accuracy rate of over 95%.</li>
-                    <li>Implemented real-time object detection via webcam integration.</li>
+                     <li>•	Problem: Visually impaired individuals face challenges recognizing currency in everyday transactions, which reduces their independence and access to financial services.</li>
+ <li>•	Action: Developed a Python-based system using OpenCV to accurately detect and classify different denominations of Indian currency. Focused on improving usability with a simple interface and high accuracy rate.</li>
+ <li>•	Result: Improved accessibility for visually impaired users by providing a reliable solution for currency recognition, achieving a 95% accuracy rate in testing.</li>
+ <li>•	Tools Used: Python, OpenCV.</li>
+
+                </ul>
+            </div>
+        </div>
+                <div class="project">
+            <h3>Predict Income of Individuals in the US</h3>
+            <div class="project-details">
+                <ul>
+                     <li>•	Problem: Understanding income trends is crucial for businesses and policymakers, but raw data requires cleaning, processing, and insightful analysis to be useful.</li>
+<li>•	Action: Built a predictive model using Python and SQL, which involved extensive data cleaning and feature engineering to ensure the accuracy of the analysis. Applied machine learning techniques to predict income levels based on demographic and economic variables.</li>
+<li>•	Result: Increased prediction accuracy by 20%, allowing for better decision-making regarding economic policies and business planning.</li>
+<li>•	Tools Used: Python, SQL, Data Cleaning, Machine Learning.</li>
+
+
                 </ul>
             </div>
         </div>
@@ -200,10 +244,18 @@
             </div>
         </div>
         <div class="achievement">
-            <h3>First Place - Hackathon 2023</h3>
+            <h3>Second Topper for CSE in 3rd Year</h3>
             <div class="achievement-details">
                 <ul>
-                    <li>Led a team to victory in a regional hackathon by developing a real-time collaborative platform for students.</li>
+                    <li>Achieved the second-highest rank in Computer Science Engineering during the third year.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="achievement">
+            <h3>Second Topper for CSE in 4th Year</h3>
+            <div class="achievement-details">
+                <ul>
+                    <li>Achieved the second-highest rank in Computer Science Engineering during the fourth year.</li>
                 </ul>
             </div>
         </div>
@@ -211,7 +263,7 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-        <p>Connect with me: <a href="https://linkedin.com/in/bharani-b">LinkedIn</a></p>
+        <p>Connect with me: <a href="https://inkedin.com/in/bharani-b-753796211">LinkedIn</a></p>
         <p>Website: <a href="#">YourWebsiteLink.com</a></p>
     </footer>
 </body>
