--- a/index.html
+++ b/index.html
@@ -129,94 +129,124 @@
             </ul>
         </div>
     </section>
-
     <!-- Internships Section -->
-    <section class="internships">
-        <h2>Internships</h2>
-        <div class="internship">
-            <h3>Salesforce Developer Intern – Salesforce (2023)</h3>
-            <div class="internship-details">
-                <p> •	Situation: Tasked with enhancing system functionality through development and integration of external systems.</p>
-                  <p>   •	Task: Develop Apex classes and Lightning Web Components while integrating external APIs for improved system capability.</p>
-                 <p>     •	Action: Wrote efficient Python scripts for data handling and utilized Apex triggers for automating business logic.</p>
-                 <p>     •	Result: Improved the system's performance and responsiveness, leading to a 30% increase in processing speed.</p>
-                 <p>     •	Tools Used: Python, Apex, LWC, API Integration, SQL. </p>
+        <section class="internships">
+            <h2>Internships</h2>
+            <div class="internship">
+                <h3>Salesforce Administrator Intern – Salesforce (2023)</h3>
+                <ul>
+                    <li><strong>Situation:</strong> Managed the configuration of Sales and Service Cloud in a virtual environment to optimize data processes.</li>
+                    <li><strong>Task:</strong> Required to automate business processes and enhance data-driven decision-making.</li>
+                    <li><strong>Action:</strong> Implemented custom workflows and automated key processes, utilizing SQL to manage data queries and generate insightful reports.</li>
+                    <li><strong>Result:</strong> Improved data processing efficiency by 40%, leading to better decision-making and reduced manual workload.</li>
+                    <li class="tools-used">Tools Used: Salesforce, SQL, Sales Cloud, Process Builder, Flow Builder, Dashboard.</li>
+                </ul>
             </div>
-        </div>
-        <div class="internship">
-            <h3>Data Science Intern – Knowledge Solutions (2023)</h3>
-            <div class="internship-details">
-                <p>•	Situation: Involved in the development of data models to support business decisions using large datasets.</p>
-                <p>•	Task: Analyze and predict trends using Python and SQL for a retail company.</p>
-                <p>•	Action: Applied data cleaning techniques, implemented predictive models using machine learning libraries, and visualized data insights for stakeholders.</p>
-                <p>•	Result: Improved data accuracy by 20% and provided actionable insights that supported business growth.</p>
-                <p>•	Tools Used: Python, SQL, Pandas, Machine Learning, Data Visualization.</p>
+            <div class="internship">
+                <h3>Salesforce Developer Intern – Salesforce (2023)</h3>
+                <ul>
+                    <li><strong>Situation:</strong> Tasked with enhancing system functionality through development and integration of external systems.</li>
+                    <li><strong>Task:</strong> Develop Apex classes and Lightning Web Components while integrating external APIs for improved system capability.</li>
+                    <li><strong>Action:</strong> Wrote efficient Python scripts for data handling and utilized Apex triggers for automating business logic.</li>
+                    <li><strong>Result:</strong> Improved the system's performance and responsiveness, leading to a 30% increase in processing speed.</li>
+                    <li class="tools-used">Tools Used: Python, Apex, LWC, API Integration, SQL.</li>
+                </ul>
             </div>
-        </div>
-        <div class="internship">
-            <h3>Salesforce Administrator Intern – Salesforce (2023)</h3>
-            <div class="internship-details">
-                <p>•   Situation: Managed the configuration of Sales and Service Cloud in a virtual environment to optimize data processes.</p>
-<p>•	Task: Required to automate business processes and enhance data-driven decision-making.</p>
-<p>•	Action: Implemented custom workflows and automated key processes, utilizing SQL to manage data queries and generate insightful reports.</p>
-<p>•	Result: Improved data processing efficiency by 40%, leading to better decision-making and reduced manual workload.</p>
-<p>•	Tools Used: Salesforce, SQL, Sales Cloud, Process Builder, Flow Builder, Dashboard. </p>
+            <div class="internship">
+                <h3>Data Science Intern – Knowledge Solutions (2023)</h3>
+                <ul>
+                    <li><strong>Situation:</strong> Involved in the development of data models to support business decisions using large datasets.</li>
+                    <li><strong>Task:</strong> Analyze and predict trends using Python and SQL for a retail company.</li>
+                    <li><strong>Action:</strong> Applied data cleaning techniques, implemented predictive models using machine learning libraries, and visualized data insights for stakeholders.</li>
+                    <li><strong>Result:</strong> Improved data accuracy by 20% and provided actionable insights that supported business growth.</li>
+                    <li class="tools-used">Tools Used: Python, SQL, Pandas, Machine Learning, Data Visualization.</li>
+                </ul>
+            </div>
+        </section>
 
+        <!-- Projects Section -->
+        <section class="projects">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Indian Currency Recognition System for Visually Impaired</h3>
+                <ul>
+                    <li><strong>Problem:</strong> Visually impaired individuals face challenges recognizing currency in everyday transactions, which reduces their independence and access to financial services.</li>
+                    <li><strong>Action:</strong> Developed a Python-based system using OpenCV to accurately detect and classify different denominations of Indian currency. Focused on improving usability with a simple interface and high accuracy rate.</li>
+                    <li><strong>Result:</strong> Improved accessibility for visually impaired users by providing a reliable solution for currency recognition, achieving a 95% accuracy rate in testing.</li>
+                    <li class="tools-used">Tools Used: Python, OpenCV.</li>
+                </ul>
             </div>
-        </div>
+            <div class="project">
+                <h3>Predict Income of Individuals in the US</h3>
+                <ul>
+                    <li><strong>Problem:</strong> Understanding income trends is crucial for businesses and policymakers, but raw data requires cleaning, processing, and insightful analysis to be useful.</li>
+                    <li><strong>Action:</strong> Built a predictive model using Python and SQL, which involved extensive data cleaning and feature engineering to ensure the accuracy of the analysis.</li>
+                    <li><strong>Result:</strong> Increased prediction accuracy by 20%, allowing for better decision-making regarding economic policies and business planning.</li>
+                    <li class="tools-used">Tools Used: Python, SQL, Data Cleaning, Machine Learning.</li>
+                </ul>
+            </div>
+            <div class="project">
+                <h3>Supermarket Management System</h3>
+                <ul>
+                    <li><strong>Problem:</strong> Manual inventory management led to inefficiencies and loss of revenue for the supermarket due to inaccurate tracking of stock and sales.</li>
+                    <li><strong>Action:</strong> Developed a Java-based system integrated with a MySQL database to automate inventory and sales tracking.</li>
+                    <li><strong>Result:</strong> Reduced inventory management time by 40% and improved the accuracy of sales reporting, leading to better stock management and profitability.</li>
+                    <li class="tools-used">Tools Used: Java, MySQL.</li>
+                </ul>
+            </div>
+            <div class="project">
+                <h3>News App</h3>
+                <ul>
+                    <li><strong>Problem:</strong> Users required real-time updates on news events, but existing systems lacked efficient error handling and performance optimization for a smooth experience.</li>
+                    <li><strong>Action:</strong> Designed and developed a news app using JavaScript and integrated it with REST APIs for real-time updates. Implemented robust error handling and monitoring systems.</li>
+                    <li><strong>Result:</strong> Delivered a responsive news app with real-time updates and minimal downtime, resulting in a 98% user satisfaction rate.</li>
+                    <li class="tools-used">Tools Used: JavaScript, REST APIs.</li>
+                </ul>
+            </div>
+            <div class="project">
+                <h3>WanderIndia Project</h3>
+                <ul>
+                    <li><strong>Problem:</strong> There was a need for an interactive platform where travelers could explore popular tourist destinations, get recommendations for local food, and provide feedback.</li>
+                    <li><strong>Action:</strong> Developed a responsive website with user-friendly sections for tourist destinations, food recommendations, and feedback, including admin login for managing content.</li>
+                    <li><strong>Result:</strong> Successfully created an engaging platform for travelers and admins to manage content efficiently.</li>
+                    <li class="tools-used">Tools Used: HTML, CSS, JavaScript, Bootstrap, MySQL, Flask, Python, REST APIs.</li>
+                </ul>
+            </div>                  
     </section>
-
-    <!-- Projects Section -->
-    <section class="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>WanderIndia</h3>
-            <div class="project-details">
-                <ul>
-                    <li>•	Problem: There was a need for an interactive platform where travelers could explore popular tourist destinations, get recommendations for the best local food, provide feedback, and have access to an administrative login for managing content.</li>
-<li>•	Action: Designed and developed a responsive website featuring user-friendly sections for tourist destinations, food recommendations, and a feedback form. Integrated an admin login functionality for easy content management.</li>
-<li>•	Result: Successfully created an engaging and informative platform that allowed users to discover Indian tourist spots, submit feedback, and enabled admins to manage content efficiently.</li>
-<li>•	Tools Used: HTML, CSS, JavaScript, Bootstrap, MySQL, Flask, Python, REST APIs.</li>
-
-                </ul>
-            </div>
-        </div>
-        <div class="project">
-            <h3>Indian Currency Recognition System</h3>
-            <div class="project-details">
-                <ul>
-                     <li>•	Problem: Visually impaired individuals face challenges recognizing currency in everyday transactions, which reduces their independence and access to financial services.</li>
- <li>•	Action: Developed a Python-based system using OpenCV to accurately detect and classify different denominations of Indian currency. Focused on improving usability with a simple interface and high accuracy rate.</li>
- <li>•	Result: Improved accessibility for visually impaired users by providing a reliable solution for currency recognition, achieving a 95% accuracy rate in testing.</li>
- <li>•	Tools Used: Python, OpenCV.</li>
-
-                </ul>
-            </div>
-        </div>
-                <div class="project">
-            <h3>Predict Income of Individuals in the US</h3>
-            <div class="project-details">
-                <ul>
-                     <li>•	Problem: Understanding income trends is crucial for businesses and policymakers, but raw data requires cleaning, processing, and insightful analysis to be useful.</li>
-<li>•	Action: Built a predictive model using Python and SQL, which involved extensive data cleaning and feature engineering to ensure the accuracy of the analysis. Applied machine learning techniques to predict income levels based on demographic and economic variables.</li>
-<li>•	Result: Increased prediction accuracy by 20%, allowing for better decision-making regarding economic policies and business planning.</li>
-<li>•	Tools Used: Python, SQL, Data Cleaning, Machine Learning.</li>
-
-
-                </ul>
-            </div>
-        </div>
-        <div class="project">
-            <h3>Portfolio Website</h3>
-            <div class="project-details">
-                <ul>
-                    <li>Designed and developed a personal portfolio website showcasing my professional experiences and projects.</li>
-                    <li>Used HTML, CSS, and JavaScript to ensure a responsive, user-friendly interface.</li>
-                    <li>Deployed the website using GitHub Pages for global access and easy sharing.</li>
-                </ul>
-            </div>
-        </div>
-    </section>
+     <!-- Certifications Section -->
+    <section class="certifications">
+            <h2>Certifications</h2>
+            <ul>
+                <li><strong>IWE League Scholars Program</strong> - Selected for the prestigious Goldman Sachs India Women in Engineering (IWE) League Scholars program, receiving intensive technical mentoring and preparation for a successful engineering career. <em>(2022)</em></li>
+                <li><strong>Data Science and Analytics using Python and R</strong> - Mastery in data collection, analysis, and visualization techniques, enabling data-driven decision-making and insights. <em>(2023)</em></li>
+                <li><strong>SQL (Basic)</strong> - Proficient in SQL for database management, ensuring efficient data organization and retrieval. <em>(2024)</em></li>
+                <li><strong>30 Days of Google Cloud</strong> - Successfully completed a comprehensive program covering various aspects of Google Cloud Platform, gaining practical skills and knowledge in cloud computing. <em>(2022)</em></li>
+                <li><strong>Problem Solving (Basic)</strong> - Successfully cleared assessments in basic problem-solving skills on HackerRank. <em>(2024)</em></li>
+                <li><strong>Problem Solving (Intermediate)</strong> - Attained certification in intermediate problem-solving skills on HackerRank. <em>(2024)</em></li>
+                <li><strong>Java (Basic)</strong> - Achieved certification in basic Java programming through HackerRank. <em>(2024)</em></li>
+                <li><strong>JavaScript (Intermediate)</strong> - Earned certification in intermediate JavaScript programming on HackerRank. <em>(2024)</em></li>
+                <li><strong>Python (Basic)</strong> - Accomplished certification in basic Python programming through HackerRank. <em>(2024)</em></li>
+                <li><strong>SQL (Advanced)</strong> - Successfully completed certification in advanced SQL skills on HackerRank. <em>(2024)</em></li>
+                <li><strong>Artificial Intelligence & Machine Learning for Business</strong> - Covered fundamentals of AI and machine learning with practical business applications. <em>(2024)</em></li>
+                <li><strong>Ultimate AWS Certified Cloud Practitioner CLF-C02</strong> - Introduction to Amazon Web Services, covering core AWS services, cloud security, and architecture. <em>(2024)</em></li>
+                <li><strong>AWS Certified DevOps Engineer Professional</strong> - Focused on DevOps principles and practices within AWS, covering CI/CD and infrastructure as code. <em>(2024)</em></li>
+                <li><strong>Data Analysis with Pandas and Python</strong> - Covered data manipulation, cleaning, and visualization using Pandas and Python. <em>(2024)</em></li>
+                <li><strong>The Complete English Grammar Course</strong> - Enhanced English grammar and communication skills, covering sentence structure and verb tenses. <em>(2024)</em></li>
+                <li><strong>The Project Management Course: Beginner to PROject Manager</strong> - Overview of project management principles, risk management, and team leadership. <em>(2024)</em></li>
+                <li><strong>Microsoft Power BI Desktop for Business Intelligence</strong> - Fundamentals of Power BI for creating interactive dashboards and data visualization. <em>(2024)</em></li>
+                <li><strong>Good Clinical Practice ICH GCP for Clinical Research (CDM)</strong> - Principles of Good Clinical Practice for designing and reporting clinical trials. <em>(2024)</em></li>
+                <li><strong>Certificate Course in Pharmacovigilance</strong> - Covered adverse event reporting and regulatory requirements in pharmacovigilance. <em>(2024)</em></li>
+                <li><strong>Microsoft Azure for .NET Developers</strong> - Covered Azure services for .NET applications, including Azure Functions and Storage. <em>(2024)</em></li>
+                <li><strong>AZ-900: Microsoft Azure Fundamentals</strong> - Introduction to Azure cloud services, SLAs, and lifecycle. <em>(2024)</em></li>
+                <li><strong>Certified Scrum Master (ICSM)</strong> - Training on Scrum framework, Agile principles, and team collaboration. <em>(2024)</em></li>
+                <li><strong>Certified Information Systems Security Professional (CISSP)</strong> - Covered security domains, identity and access management, and asset security. <em>(2024)</em></li>
+                <li><strong>Embedded Systems Bootcamp: RTOS, IoT, AI, Vision, and FPGA</strong> - Extensive course on embedded systems and real-time operating systems. <em>(2024)</em></li>
+                <li><strong>Quality Assurance Mastery - Manual Software Testing</strong> - Focused on manual software testing principles and defect reporting. <em>(2024)</em></li>
+                <li><strong>B2B SaaS Best Practices</strong> - Explored best practices for building and scaling B2B SaaS products. <em>(2024)</em></li>
+                <li><strong>Django Rest Framework</strong> - Essentials of building RESTful APIs using Django Rest Framework. <em>(2024)</em></li>
+                <li><strong>CompTIA Network+ (N10-008)</strong> - Comprehensive knowledge of network infrastructures and enterprise network operations. <em>(2024)</em></li>
+            </ul>
+        </section>
 
     <!-- Volunteering Section -->
     <section class="volunteering">
